# mcp-server

./: .gitignore  README.md  build-all.sh  docker-compose.yml  test-e2e.sh
mcp-client/: .gitignore  Dockerfile  Readme.md  config.yml  config_sample.yml  pom.xml
mcp-client/src/main/java/com/example/mcpclient/: LLMService.java  McpClientApplication.java  McpClientController.java  McpClientProperties.java
mcp-client/src/main/java/de/augmentia/mcpclient/: LLMService.java  McpClientApplication.java  McpClientController.java  McpClientProperties.java
mcp-server/: Dockerfile  Flow.md  README.md  pom.xml
mcp-server/config/: mcp_server.yml
mcp-server/src/main/java/com/example/mcp/: RestMcpServerApplication.java
mcp-server/src/main/java/com/example/mcp/config/: McpServerConfiguration.java  WebConfig.java  (+1 more)
mcp-server/src/main/resources/: application.yml  mcp-client-config.yml  openapi.yml
mcp-server/src/test/java/com/example/mcp/: RestMcpServerApplicationTests.java
mcp-server/src/test/resources/: mcp-client-config.yml  users-api.yml
python_mcp_server/: Dockerfile  README.md  mcp_server.yml  pyproject.toml  requirements.txt  user_api.yml
python_mcp_server/app/: exceptions.py  main.py  models.py
python_mcp_server/app/sample_tools/: user_service.py
python_mcp_server/app/services/: mcp_configuration_service.py  mcp_server_service.py  openapi_to_mcp_converter.py  rest_api_executor_service.py
python_mcp_server/tests/: test_main.py
sample-tools-app/: Dockerfile  pom.xml
temp/: mcp_server.yml
temp/tools/: orders-api.yaml  read-file.yml  users-api.yml
(+54 files in other folders)
